[package]
name = "privacypass-tower-service-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
features = "0.10.0"
futures = "0.3.23"
hyper = "0.14.20"
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
trace = "0.1.6"
privacypass = { git = "https://github.com/raphaelrobert/privacypass" }
async-trait = "0.1.57"
base64 = "0.13.0"

[dev-dependencies]
reqwest = "0.11.11"
