# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "privacypass-middleware"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
features = "0.10.0"
futures = "0.3"
hyper = "1"
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["trace"] }
trace = "0.1"
privacypass = { git = "https://github.com/raphaelrobert/privacypass" }
async-trait = "0.1"
base64 = "0.22"
actix-web = "4.4"
futures-util = "0.3.24"
http = "1"

[dev-dependencies]
reqwest = "0.12"
